@@ -1,3 +1,7 @@
+2014-01-31  Lars Ingebrigtsen  <larsi@gnus.org>
+
+	* nnimap.el (nnimap-transform-headers): Fix Davmail header parsing.
+
 2014-01-31  Dave Abrahams  <dave@boostpro.com>
 
 	* gnus-salt.el (gnus-tree-highlight-article): Don't move point around
